--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
     <main>
-      
+      <ul>
+        <li><a href="./1-timer.html">Timer</a></li>
+        <li><a href="./2-snackbar.html">Snackbar</a></li>
+      </ul>
     </main>
 
     
