add css fot task-1

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goit-js-hw-10</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -17,6 +18,7 @@
 
     
     <script type="module" src="./js/1-timer.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script type="module" src="./js/2-snackbar.js" defer></script>
   </body>
 </html>
