--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
+    <script type="module" src="./js/1-timer.js" defer></script>
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Timer</title>
 </head>
 <body>
@@ -28,6 +31,8 @@
             <span class="label">Seconds</span>
         </div>
     </div>
-    <script type="module" src="./js/1-timer.js" defer></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js"></script>    
 </body>
 </html>
