--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goit-js-hw-10</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <main>
@@ -17,8 +18,10 @@
     </main>
 
     
-    <script type="module" src="./js/1-timer.js" defer></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js"></script>
+    <script type="module" src="./js/1-timer.js" defer></script>
     <script type="module" src="./js/2-snackbar.js" defer></script>
   </body>
 </html>
