start make css for task-2

--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <form class="form">
-        <label>
+        <label >
             Delay (ms)
             <input type="number" name="delay" required />
         </label>
@@ -27,7 +27,7 @@
             </label>
         </fieldset>
     
-        <button type="submit">Create notification</button>
+        <button class="btn-radio" type="submit">Create notification</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js"></script>
 </body>
